@@ -1,3 +1,8 @@
+20060712
+ - (dtucker) [configure.ac defines.h] Only define SHUT_RD (and friends) and O_NONBLOCK
+   if they're really needed.  Fixes build errors on HP-UX, old Linuxes and probably
+   more.
+
 20060711
  - (dtucker) [configure.ac ssh-keygen.c openbsd-compat/bsd-openpty.c
    openbsd-compat/daemon.c] Add includes needed by open(2).  Conditionally
@@ -4846,4 +4851,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4387 2006/07/11 09:01:51 dtucker Exp $
+$Id: ChangeLog,v 1.4388 2006/07/12 04:14:31 dtucker Exp $
